--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,18 @@ body {
 #smooth-content {
   will-change: transform;
 }
+
+.flavour-enter {
+  transform: translateY(10vh);
+  opacity: 0;
+  animation: flavour-up 2s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+  animation-delay: 5s;
+
+}
+
+@keyframes flavour-up {
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
